imports/ui/stylesheets/forms.scss
@import "./colors.scss";
@import "./fonts.scss";

label,
.noTextSelect {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.btn { /* nornal blue text-button */
  padding: 0 16px;
  font-size: 16px;
  line-height: 40px;
  text-transform: uppercase;
  color: $link-blue-darker;
  background-color: transparent;
  border-radius: 4px;
  border: none;
  box-shadow: none;
  outline: 0;

  &:hover {
    color: $link-blue;
    background-color: transparent;
    box-shadow: none;
  }
}

.btn-default {

  &:hover {
    color: $link-blue-lighter;
  }
}

.btn-primary,
.btn-primary.active,
.btn-primary:active,
.btn-primary:focus { /* filled blue button */
  color: white;
  background-color: $link-blue;
  box-shadow: none;

  &:hover {
    color: white;
    background-color: $link-blue-darker;
  }
}

a.btn-primary,
a.btn-primary.active,
a.btn-primary:active,
a.btn-primary:focus {
  height: fit-content;
}

.btn-danger,
.btn-danger:hover {
  color: $error-red;
  box-shadow: none;
}

.btn-danger:focus {
  box-shadow: none !important;
}

.dropdown-toggle {
  color: $bg-anthracite;
  padding-right: 8px;

  &:hover {
    color: $link-blue-lighter;
  }

  &:after {
    right: 0;
  }
}

a.btn-sm { /* e.g. forgot password */
  font-size: 14px;
  font-weight: 400;
  color: $link-blue;
  padding-left: 0;

  &:hover {
    color: $link-blue-lighter;
  }
}

.glyphicon {
  font-family: 'iconfield-v03';
}

.panel,
.panel-default {
  background: none !important;
  box-shadow: none !important;
  border: none !important;
  border-radius: 0 !important;

  .panel-body {
    padding: 0 !important;
    margin-top: 1em !important;

    .panel-heading,
    .panel-row,
    .row,
    .field.form-group {
      margin: 0 !important;
      padding: 0 !important;
    }

    .panel-body {
      position: relative !important;
    }

    .panel-heading {
      position: relative;

      label {
        width: 100%;
        line-height: 1.9em;
        font-size: 21px;
        font-weight: 300 !important;
        padding-left: 2.2em;
        // border-bottom: 1px solid #ddd;
      }
    }

    .row {
      position: relative;
      margin-bottom: 16px !important;
    }

    .col-xs-1 {
      width: 3em;
    }

    .row > .badge {
      border: none !important;
    }

    .badge {
      cursor: pointer;
      position: absolute;
      left: 0;
      padding: 0.5em !important;
      font-size: 18px !important;
      width: 2em;
      color: $link-blue;
      background: white;

      border-radius: 2em;
    }

    .badge.pull-right { /* add participants button */
      position: absolute;
      right: 0;
      top: 0;
      color: $link-blue;
      background: white;
    }
  }
}

.panel.panel-danger,
form .panel-danger .panel-body {
  color: $error-red;
  font-weight: 400;
}

form {
  display: flex;
  flex-direction: column;
  align-items: flex-start;

  .form-group,
  .input {
    margin-top: 16px;
    width: 26em;
    max-width: 90 vv;

    input,
    select,
    textarea {
      width: 100%;
      border: 1px solid $shadow-grey;
      font-weight: 400;
      font-size: 16px;
      padding: 8px;
      transition: 0.5s;

      &:focus,
      &:hover {
        border: 1px solid $link-blue;
        box-shadow: none;
        transition: 0.5s;
      }
    }

    input {
      padding: 4px 8px;
      min-height: 2.5em;
      border-radius: 6px;

      &[type="checkbox"] {
        width: auto;
        min-height: auto;
        margin-right: 10px;
      }
    }

    input,
    textarea {
      &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
        font-style: italic;
      }
      &::-moz-placeholder { /* Firefox 19+ */
        font-style: italic;
      }
      &:-ms-input-placeholder { /* IE 10+ */
        font-style: italic;
      }
      &:-moz-placeholder { /* Firefox 18- */
        font-style: italic;
      }
    }

    label {
      color: $bg-anthracite;
      font-size: 14px;
      font-weight: 400;

      &:focus {
        transition: 0.5s;
      }
    }

    div.checkbox label {
      font-size: 16px;
    }

    span.help-block {
      font-weight: 400;
      line-height: 32px;
      color: $text-muted;
      transition: 0.5s;
    }

    i.glyphicon {
      top: 26px;
      right: -36px;

      &:before {
        font-family: 'iconfield-v03';
        font-size: 18px;
      }
    }

    i.glyphicon-remove::before {
      content: "A";
    }

    &.has-feedback.has-error,
    .panel-danger {
      transition: 0.5s;

      label {
        color: $error-red;
      }

      input.form-control.form-control-danger,
      input,
      input:focus {
        border: 1px solid $error-red; /* remove !important */
        box-shadow: none;
      }

      span.help-block,
      i.glyphicon-remove::before,
      i.glyphicon::before {
        color: $error-red;
      }

      i.glyphicon-remove {
        left: -9px;
        top: 43px;
        color: $error-red;      
        
        &:before {
          content: 'D';
          font-size: 14px;
        }
      }
    
      span.help-block {
        font-weight: 300;
      }
    }

    .preview-image-area {
      margin-left: 0;
    }
  }

  .actions {
    margin-top: 20px;
    display: flex;
  }

  .has-danger .btn,
  .has-danger .btn:hover {
    background-color: $cta-disabled-grey;
  }

  .panel-heading.has-error::before,
  .panel-danger .panel-body div::before,
  .form-group.has-feedback.has-error i.glyphicon-remove::before,
  .panel-heading.has-error .badge.pull-right:before { 
    display: none !important; /*remove arrows in error state */
  }

  .panel-danger { /* box with error feedback*/
    color: white;
    background-color: $bg-anthracite;
    border: none;
    border-radius: 0;

    .panel-body div {
      position: relative;

      &:before {
        position: absolute;
        left: 0;
        content: "D";
        color: $error-red;
        font-family: 'iconfield-v03';
        font-size: 14px;
      }
    }

    .panel-heading.has-error {
      label {
        color: $error-red !important;
      }

      span.help-block {
        display: none;
      }
    }
  }
}

.error-box.alert.alert-danger {
  color: $error-red !important;
  font-weight: 400;
}

section.help-block section{
  margin-right: 16px;
}

/* date picker */

.rdt input.form-control {
  font-size: 16px;
  font-weight: 400;  
}

.rdt:hover,
.rdtOpen   {

  input.form-control {
    border: 1px solid $link-blue;
    box-shadow: none;
    transition: 0.5s;
    cursor: pointer;
  }

  .rdtTimeToggle {
    font-weight: 800;
    color: $link-blue;
  }
}

